tests/invalid/annotation_existing_name_not_type/main.py
x: int = 1


def main() -> None:
    y: x = 1
